# GazeClicker

./: .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile
exe/GazeClicker/: CMakeLists.txt  GazeClicker.cpp  GazeClicker.mm  StatusBarApp.h  StatusBarApp.mm
lib/local/DwellClick/: CMakeLists.txt
lib/local/DwellClick/include/: Click.h
lib/local/DwellClick/src/: Click.cpp
lib/local/GazeAnalyser/include/: GazeEstimation.h
lib/local/GazeAnalyser/src/: GazeEstimation.cpp
lib/local/GazeCoordinate/: CMakeLists.txt
lib/local/GazeCoordinate/include/: GazeCoordinate.h
lib/local/GazeCoordinate/src/: GazeCoordinate.cpp
lib/local/GazePattern/: CMakeLists.txt
lib/local/GazePattern/include/: GazeClickerConfig.h  GazePattern.h  HMM.h
lib/local/GazePattern/src/: GazeClickerConfig.cpp  GazePattern.cpp  HMM.cpp  HMMGazePattern.cpp
lib/local/MappingScreen/: CMakeLists.txt
lib/local/MappingScreen/include/: MappingScreen.h
lib/local/MappingScreen/src/: MappingScreen.cpp
lib/local/Utilities/: CMakeLists.txt
lib/local/Utilities/include/: Click.h  KalmanFilter.h  UI.h  Visualizer.h
lib/local/Utilities/src/: Click.cpp  KalmanFilter.cpp  UI.cpp  Visualizer.cpp
